css changes, reduce size of * and fix spacing of error message on accepting conditions on start page

--- a/frp/frp/static/css/prathambooks.css
+++ b/frp/frp/static/css/prathambooks.css
@@ -1970,7 +1970,7 @@ span.fb:hover {
 }
 .startCampaign .form .col-md-9 .well strong {
   color: #ff7800;
-  font-size: 1em;
+  font-size: 0.75em;
 }
 .startCampaign .form .col-md-9 .well .form-control {
   margin: 0 0 15px;
@@ -2139,6 +2139,10 @@ span.fb:hover {
 }
 .startCampaign #contact ul li#tw {
   background: url(../images/twColor.png) no-repeat center left;
+}
+.startCampaign .form .checkbox .alert{
+  margin-top:0 !important;
+    
 }
 /* LESS Document */
 #internalCampaign.learn .well p {
